test(Order): 테스트하면서 로직에 대해서 수정하였습니다.